Updated pipeline configuration for thiagodefreitas

--- a/thiago-xps/thiagodefreitas/pipeline_config.yaml
+++ b/thiago-xps/thiagodefreitas/pipeline_config.yaml
@@ -4,7 +4,7 @@ repositories:
   ipa_canopen:
     ros_distro: [groovy]
     robots: null
-    jobs: [regular_build]
+    jobs: [regular_build, downstream_build, nongraphics_test]
     poll: true
     dependencies: {}
     prio_ubuntu_distro: precise
@@ -15,6 +15,6 @@ repositories:
     prio_arch: amd64
     type: git
     url: git@github.com:thiagodefreitas/ipa_canopen.git
-    version: groovy_dev
+    version: almost_merged
 email: thiagodefreitas@gmail.com
 committer_email_enabled: false
